--- a/src/main/resources/templates/AllTracks.html
+++ b/src/main/resources/templates/AllTracks.html
@@ -154,19 +154,18 @@
             </div>
             <div class="details-track__tabs">
                 <div class="details-track__top">
-                    <button class="details-track__btn active" data-tab="quotes">Цитаты</button>
+                    <button class="details-track__btn active" data-tab="quotes">Подробное</button>
                     <button class="details-track__btn" data-tab="text">Текст</button>
-                    <button class="details-track__btn" data-tab="video">Клип</button>
+                    <button class="details-track__btn" data-tab="video">Цитаты</button>
                 </div>
                 <div class="details-track__content">
                     <div class="details-track__tab active" data-tab="quotes">
-                        <p>
-                            Описание трека
-                        </p>
-
+                        <h3 class="details-track__artist">Хомяк</h3>
+                        <p class="details-track__title">Темным и Обманчивым</p>
+                        <span class="details-track__genre">Русский Рок | 2023 Год</span>
                     </div>
                     <div class="details-track__tab" data-tab="text">
-                        <p>
+                        <p class="details-track__lyrics">
                             Текст трека
                         </p>
                     </div>
