Превращение раздела "Проект" в раздел "Новости"

--- a/src/main/resources/templates/components/header.html
+++ b/src/main/resources/templates/components/header.html
@@ -12,7 +12,7 @@
                         th:src="@{/images/header/podcast.svg}"></a></li>
                 <li class="header__link"><a th:href="@{/allartist}">Артисты <img
                         th:src="@{/images/header/artists.svg}"></a></li>
-                <li class="header__link"><a th:href="@{/project}">Новости <img
+                <li class="header__link"><a th:href="@{/news}">Новости <img
                         th:src="@{/images/header/project.svg}"></a>
                 </li>
                 <li class="header__link"><a th:href="@{/collection}">Коллекция <img
