Update (v1.12): Реализовано удаление фотографий из альбома отдельно. Разделены контроллеры Артиста и Альбомов связанных с ним

--- a/src/main/resources/static/css/admin/admin-editArtist.css
+++ b/src/main/resources/static/css/admin/admin-editArtist.css
@@ -1,10 +1,14 @@
-.admin-tools {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
+/*.admin-tools {*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    justify-content: space-between;*/
+/*}*/
 
 .editing-tools {
+    padding: 30px;
+    position: absolute;
     display: flex;
     gap: 12px;
+    z-index: 5;
+    right: 0;
 }
