--- a/src/main/resources/static/css/Artist.css
+++ b/src/main/resources/static/css/Artist.css
@@ -38,7 +38,7 @@
 .Artist-name {
     margin-top: 85px;
     color: var(--white);
-    font-family: Nunito;
+    font-family: Nunito, serif;
     font-size: 54px;
     font-style: normal;
     font-weight: 600;
@@ -69,7 +69,7 @@
     padding: 18px 45px;
 
     color: var(--white);
-    font-family: Nunito;
+    font-family: Nunito, serif;
     font-size: 18px;
     font-weight: 400;
     line-height: normal;
@@ -89,7 +89,7 @@
     padding: 18px 45px;
 
     color: #9d9d9d;
-    font-family: Nunito;
+    font-family: Nunito, serif;
     font-size: 18px;
     font-weight: 400;
     line-height: normal;
@@ -97,7 +97,7 @@
 
 .Artist__btns-similar {
     color: var(--white);
-    font-family: Nunito;
+    font-family: Nunito, serif;
     font-size: 18px;
     font-weight: 600;
     padding: 18px 45px;
@@ -122,7 +122,7 @@
 
 .statistics-title {
     color: var(--white);
-    font-family: Nunito;
+    font-family: Nunito, serif;
     font-size: 28px;
     font-weight: 500;
 }
@@ -151,7 +151,7 @@
 
 .statistics-block span {
     color: var(--gray);
-    font-family: Nunito;
+    font-family: Nunito, serif;
     font-size: 21px;
     font-weight: 400;
     line-height: normal;
@@ -163,7 +163,7 @@
     text-overflow: ellipsis;
     max-width: 400px;
     color: var(--white);
-    font-family: Nunito;
+    font-family: Nunito, serif;
     font-size: 36px;
     font-weight: 500;
     line-height: normal;
@@ -171,7 +171,7 @@
 
 .Artist__info-title {
     color: var(--white);
-    font-family: Nunito;
+    font-family: Nunito, serif;
     font-size: 28px;
     font-weight: 500;
     line-height: normal;
@@ -188,8 +188,7 @@
 .Artist__info-playlist h3 {
     margin: 18px;
     color: var(--white);
-    font-family: Nunito;
-    font-size: 24px;
+    font-size: 21px;
     font-weight: 500;
     line-height: normal;
     position: absolute;
@@ -230,6 +229,10 @@
     gap: 22px;
 }
 
+.Artist__info-sets-wrapper {
+    position: relative;
+}
+
 .Artist__info-set {
     position: relative;
 }
@@ -239,12 +242,44 @@
     width: 546px;
     height: 280px;
     object-fit: cover;
-
-    top: 0;
-    left: 0;
-    z-index: -5;
-    position: absolute;
 }
+
+.set-date,
+.set-title {
+    color: var(--white);
+    font-size: 24px;
+    font-weight: 500;
+    line-height: normal;
+}
+.set-date {
+    position: absolute;
+    top: 0;
+    padding: 30px;
+}
+
+.set-info {
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 30px;
+    align-items: flex-end;
+}
+
+.set-city {
+    color: var(--white);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: normal;
+}
+
+
+
+
+
+
+
 
 /*.set-cover::after {*/
 /*    border-radius: 13px;*/
