--- a/src/main/resources/templates/admin/AdminAllUsers.html
+++ b/src/main/resources/templates/admin/AdminAllUsers.html
@@ -35,7 +35,7 @@
             <div class="admin__panel">
                 <div class="admin__panel-users">
                     <ul>
-                        <li th:each="user : ${users}">
+                        <li th:each="user : ${users}">j
                             <div class="user-top">
                                 <div class="user-top-left">
                                     <img class="user_avatar" th:src="@{'/uploads/' + ${user.avatar}}" alt="ava-users" onerror="this.src = '/images/admin/admin-ava.svg';">
